--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -13,7 +13,7 @@
         <meta name="author" content="WowThemez">
 
         <title>App Permergas</title>
-        <base href="http://permergas.app/web/">
+        <base href="/web/">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 
     <!-- Font Awesome CSS -->
