--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -3,4 +3,16 @@
  <section class="body_splash valign-wrapper">
     <img class="logo" src="{{asset('themeapp/img/logo.svg')}}" height="150px" alt="">
   </section>
+ 
+
+
+ {% endblock %}
+ {% block javascripts %}
+<script type="text/javascript">
+$(document).ready(function(){
+	setTimeout(function(){
+	location.href='slider';
+	},3000)
+})
+</script>
  {% endblock %}
