login and new dashboard

--- a/templates/app/dashboard.html.twig
+++ b/templates/app/dashboard.html.twig
@@ -14,7 +14,7 @@
   <section class="center">
     <div class="circle valign-wrapper">
       <div class="value_container">
-        <h2 class="value_grl">3887</h2>
+        <h2 class="value_grl">{{wallet.saldo}}</h2>
         <span>MXN</span>
       </div>
     </div>
