--- a/templates/app/dashboard.html.twig
+++ b/templates/app/dashboard.html.twig
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="row ">
         <div class="col s6">
-          <h4 class="date_title"> <span>Valor por litro</span> <br> 12/08/19 </h4>
+          <h4 class="date_title"> <span>Valor por litro</span> <br> {{fecha|date('d/m/y')}} </h4>
         </div>
         <div class="col s6">
           <h3 class="gas_price">1090<span>MXN</span> </h3>
