--- a/templates/app/slider.html.twig
+++ b/templates/app/slider.html.twig
@@ -11,7 +11,7 @@
 
   <div class="carousel  carousel-slide carousel-slider center" data-indicators="true">
     <div class="carousel-fixed-item center">
-      <a href="{{path('app_login')}}" class="btn-flat waves-effect darken-text-2">Omitir</a>
+      <a href="{{path('app_login')}}" id="omitir" class="btn-flat waves-effect darken-text-2">Omitir</a>
     </div>
     <div class="carousel-item" href="#one!">
       <h2>Administrar tu gasolina <br> ahora es fácil</h2>
@@ -49,6 +49,11 @@
 
   {% block javascripts %}
    <script type="text/javascript">
+    $("#omitir").click(function(e){
+      e.preventDefault();
+      alert("hola");
+      location.href='login';
+    })
   $('.carousel.carousel-slider').carousel({fullWidth: true});
 
   </script>
