--- a/templates/base_app.html.twig
+++ b/templates/base_app.html.twig
@@ -33,6 +33,8 @@
   {% endblock %}
   <script src="{{asset('themeapp/js/jquery-3.4.1.min.js')}}"></script>
   <script src="{{asset('themeapp/js/materialize.min.js')}}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+
   <footer>
   </footer>
   {% block javascripts %}
