--- a/templates/app/recuperar_cuenta.html.twig
+++ b/templates/app/recuperar_cuenta.html.twig
@@ -48,19 +48,15 @@
         </form>
 	!-->
 
-        <form id="frm-login" action="{{ path("user_check_login") }}" method="post" class="login-form validate-form">
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
+        <form id="frm-login" action="{{ path("recuperar_cuenta") }}" method="post" class="login-form validate-form">
+
 
    
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">×</span>
-        </button>
-        {{message}}
+        <div class="msg msg-info z-depth-3 scale-transition">    {{message}} 
         </div>
+    
+       
     {% endfor %} 
     {% for message in app.flashes('bad') %}
 	<div class="alert bg-pink alert-dismissible" role="alert" style="width: 100%; text-align: center;margin-top: 10px">
@@ -72,37 +68,20 @@
 
     <div class="input-field col s12">
         <input type="hidden" name="_login_origin" value="app">
-        <input class="validate input_round" type="email" id="username" name="_username" value="{{ last_username }}" placeholder="Correo electrónico">
+        <input class="validate input_round" type="email" id="username" name="_username" value="" placeholder="Correo electrónico">
          <label for="last_name"> Correo electrónico</label>
     </div>
 
-    <div class="input-field col s12">
-        <input class="validate input_round" type="password" id="password" name="_password"  autocomplete="current-password" placeholder="Contraseña">
-         <label for="last_name"> Contraseña</label>
-    </div>
+    
      <div class="col s12">
-       <button type="btn" id="iniciar-sesion" class="btn-app  bg_principal waves-effect waves-darken btn">Iniciar Sesión</button>
+       <button type="btn" id="recuperar_cuenta" class="btn-app  bg_principal waves-effect waves-darken btn">Recuperar mi cuenta</button>
 
           </div>
  	 <div class="  col s12">
-              <a href="{{path('app_recuperar_cuenta')}}" class="btn-app-login btn-flat  btn"> Recuperar contraseña </a>
+              <a href="{{path('app_login')}}" class="btn-app-login btn-flat  btn"> Iniciar Sesión </a>
           </div>
-   	<div class="clearfix">
-
-          </div>
-          <div class="col s12">
-          <hr class="divisor_login">
-          </div>
-          <div class="input-field  col s12">
-            <a class="btn-app left-align-btn  bg_fb waves-effect waves-darken btn"> <i class="icon-btn fa fa-3x fa-facebook-square" aria-hidden="true"></i> Continuar con Facebook</a>
-          </div>
-          <div class="input-field  col s12">
-            <a class="btn-app left-align-btn bg_white bg_principal waves-effect waves-darken btn"> <img class="img-btn" src="{{asset('themeapp/img/google_svg.svg')}}" height="20px" alt="">Continuar con Gmail</a>
-          </div>
-
-          <div class="input-field  col s12">
-          </div>
-            <a class="btn-app-login btn-flat  btn"> Crear cuenta con email </a>
+   
+        
           </div>
 </form>
 
@@ -123,18 +102,14 @@
                 required:true,
                 email:true
             },
-            '_password': {
-                required: true,
-            },
+            
         },
         messages:{
             '_username':{
                 required:'El campo email es obligatorio',
                 email:'Ingrese un email valido'
             },
-            '_password':{
-                required:'El campo password es obligatorio',
-            }
+            
         },
         highlight: function (input) {
             
@@ -155,10 +130,10 @@
 
   $(document).ready(function(){
     $('#frm-login').validate();
-    $("#iniciar-sesion").click(function(e){
+    $("#recuperar-cuenta").click(function(e){
       e.preventDefault();
       var valid=$("#frm-login").valid();
-      if(valid){
+      if(valid){  
         $("#frm-login").submit();
       }else{
 
