--- a/templates/base_app.html.twig
+++ b/templates/base_app.html.twig
@@ -19,6 +19,17 @@
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/materialize.min.css')}}" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/main.css')}}" media="screen,projection" />
   <script src="{{asset('themeapp/js/modernizr.js')}}"></script>
+
+  <style type="text/css">
+    .msg-info{
+  border-color: #0288d1;
+  background-color: #29b6f6;
+  color: white;
+  padding: 20px;
+  border-radius:10px;
+}
+  </style>
+
 </head>
 
 <body class="">
