--- a/templates/home/index_cliente.html.twig
+++ b/templates/home/index_cliente.html.twig
@@ -39,13 +39,13 @@
             </div>
         </div>
     </div>
-     <div class="col-lg-4">
+    <div class="col-lg-4">
         <div class="plain-card">
             <div class="card-inner">
                 <h6 class="tx-primary m-b-10">Saldo Crédito</h6>
                 <div class="row">
                     <div class="col col-block">
-                        <h4>0</h4>
+                        <h4>{{wallet.saldoCredito}}</h4>
                     </div>
                 </div>
             </div>
