--- a/templates/clientes/show.html.twig
+++ b/templates/clientes/show.html.twig
@@ -15,6 +15,7 @@
     <div class="card-body table-responsive">
     <table class="table table-condensed">
         <tbody>
+
             <tr>
                 <th>Id</th>
                 <td>{{ cliente.id }}</td>
@@ -81,6 +82,10 @@
                 <th>Tipo</th>
                 <td>{{ cliente.tipo }}</td>
             </tr>
+            <tr>
+                <th>Flotilla</th>
+                <td>{{ flotilla}}</td>
+            </tr>
         </tbody>
     </table>
 
@@ -116,6 +121,30 @@
    
 
     </div>
+        <div class="card">
+        <div class="header bg-cyan ">
+            <h2>
+                Saldo Wallet Crédito / {{cliente.nombres}}
+            </h2>
+            
+        </div>
+        <div class="card-body ">
+           <h2>$ {{wallet_cliente.saldoCredito |number_format(2)}} MX</h2>
+
+        </div>
+         <div class="card-footer">
+
+            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modal_agregar_saldo" id="agregar_saldo_credito" >Agregar Saldo</button>
+            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#modal_quitar_saldo" id="quitar_saldo_credito" >Quitar Saldo</button>
+        </div>
+
+   
+
+    </div>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
     </div>
     {% else %}
 
@@ -225,6 +254,7 @@
             </div>
             <div class="modal-body">
                 <form id="form_agregar_saldo" action="{{path('cliente_actualizar_saldo',{id:cliente.id})}}" method="POST">
+                    <input type="hidden" name="escredito" id="escredito" value="0">
                     <input type="hidden" name="wallet_cliente" id="wallet_cliente" value="{{wallet_cliente.id}}" >
                     <input type="hidden" name="accion" value="agregar">
                     <label for="email_address">Nota Transferencia</label>
@@ -232,11 +262,21 @@
                         <div class="form-line">
                             <input type="text" id="notas" name="notas" class="form-control"  placeholder="Notas" value="">
                         </div>
-                    </div>      
+                    </div> 
+                    <div id="htmlsaldo" class="htmlsaldo">     
+                        <label for="email_address">Saldo Wallet Cliente</label>
+                        <div class="form-group">
+                            <div class="form-line">
+                                <input type="text" id="saldo_flotilla" class="form-control" data-saldo={{wallet_cliente.saldo}} readonly="true" placeholder="" value="$ {{wallet_cliente.saldo|number_format(2)}} MX">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="htmlsaldo_credito" class="htmlsaldo_credito">
                     <label for="email_address">Saldo Wallet Cliente</label>
-                    <div class="form-group">
-                        <div class="form-line">
-                            <input type="text" id="saldo_flotilla" class="form-control" data-saldo={{wallet_cliente.saldo}} readonly="true" placeholder="" value="$ {{wallet_cliente.saldo|number_format(2)}} MX">
+                        <div class="form-group">
+                            <div class="form-line">
+                                <input type="text" id="saldo_flotilla" class="form-control" data-saldo={{wallet_cliente.saldoCredito}} readonly="true" placeholder="" value="$ {{wallet_cliente.saldoCredito|number_format(2)}} MX">
+                            </div>
                         </div>
                     </div>
                     <label for="password">Valor a transferir</label>
@@ -273,17 +313,31 @@
             <div class="modal-body">
                 <form id="form_quitar_saldo" action="{{path('cliente_actualizar_saldo',{id:cliente.id})}}" method="POST">
                     <input type="hidden" name="wallet_cliente" id="wallet_cliente" value="{{wallet_cliente.id}}" >
+                    <input type="hidden" class="escredito" name="escredito" id="escredito" value="0">
+                    <
                     <input type="hidden" name="accion" value="quitar">
                     <label for="email_address">Nota Transferencia</label>
                     <div class="form-group">
                         <div class="form-line">
                             <input type="text" id="notas" name="notas" class="form-control"  placeholder="Notas" value="">
                         </div>
-                    </div>  
+                    </div>
+
+                    <div id="htmlsaldo_credito" class="htmlsaldo">
+
+                        <label for="email_address">Saldo Wallet Cliente</label>
+                        <div class="form-group">
+                            <div class="form-line">
+                                <input type="text" readonly="true" id="frm_quitar_saldo_wallet_cliente" class="form-control" placeholder="" value="{{wallet_cliente.saldo|number_format(2)}} MX" data-saldo="{{wallet_cliente.saldo}}" >
+                            </div>
+                        </div>
+                    </div>
+                    <div id="htmlsaldo_credito" class="htmlsaldo_credito">
                     <label for="email_address">Saldo Wallet Cliente</label>
-                    <div class="form-group">
-                        <div class="form-line">
-                            <input type="text" readonly="true" id="frm_quitar_saldo_wallet_cliente" class="form-control" placeholder="" value="{{wallet_cliente.saldo|number_format(2)}} MX" data-saldo="{{wallet_cliente.saldo}}" >
+                        <div class="form-group">
+                            <div class="form-line">
+                                <input type="text" id="saldo_flotilla" class="form-control" data-saldo={{wallet_cliente.saldoCredito}} readonly="true" placeholder="" value="$ {{wallet_cliente.saldoCredito|number_format(2)}} MX">
+                            </div>
                         </div>
                     </div>
                     <label for="password">Valor a descontar</label>
@@ -396,7 +450,8 @@
 {% if is_granted('ROLE_ADMIN') %}
 <script type="text/javascript">
     $(document).ready(function(){
-       
+        
+        $("#htmlsaldo_credito").hide();
 
         $('#form_agregar_saldo').validate({
         rules: {
@@ -408,6 +463,9 @@
                 min:1,
                 max:$("#saldo_flotilla").data('saldo')
             },
+            'valor':{
+                required: true
+            }
         },
         messages:{
             'notas':{
@@ -417,6 +475,9 @@
                 required:'Ingresa el saldo a transferir',
                 min:'Ingresa un valor valido',
                 max:'El valor a transferir es muy alto no debe superar el 1,000,000'
+            },
+            'valor':{
+             required:'El campo valor es obligatorio'   
             }
         },
         highlight: function (input) {
@@ -462,6 +523,20 @@
             $(element).parents('.form-group').append(error);
         }
     });
+
+    $("#agregar_saldo_credito").click(function(e){
+        e.preventDefault();
+        $("#escredito").val(1);
+        $("#htmlsaldo").hide();
+        $("#htmlsaldo_credito").show();
+    })
+
+    $("#quitar_saldo_credito").click(function(e){
+        e.preventDefault();
+        $(".escredito").val(1);
+        $(".htmlsaldo").hide();
+        $(".htmlsaldo_credito").show();
+    })
 
     $("#btn_save_transferencia").click(function(e){
         e.preventDefault();
