--- a/templates/home/index_flotilla.html.twig
+++ b/templates/home/index_flotilla.html.twig
@@ -33,6 +33,18 @@
     <div class="col-lg-4">
         <div class="plain-card">
             <div class="card-inner">
+                <h6 class="tx-primary m-b-10">Saldo Wallet Credito</h6>
+                <div class="row">
+                    <div class="col col-block">
+                        <h2>{{wallet.saldoCredito|number_format(2)}}</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="plain-card">
+            <div class="card-inner">
                 <h6 class="tx-primary m-b-10">Saldo Wallet Clientes</h6>
                 <div class="row">
                     <div class="col col-block">
@@ -42,6 +54,8 @@
             </div>
         </div>
     </div>
+
+  
 </div>
 
 <div class="row">
