lista de transacciones o movimientos

--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -8,6 +8,20 @@
 
 <li>
 
+    <a href="{{asset('/admin/transacciones')}}">
+        <i class="far fa-calendar"></i>
+        <span>Transacciones</span>
+    </a>
+</li>
+<li>
+
+    <a href="{{asset('/admin/transacciones/movimientos')}}">
+        <i class="far fa-calendar"></i>
+        <span>Movimientos</span>
+    </a>
+</li>
+<li>
+
     <a href="{{asset('/admin/flotillas')}}">
         <i class="far fa-calendar"></i>
         <span>Flotillas</span>
