--- a/templates/app/dashboard.html.twig
+++ b/templates/app/dashboard.html.twig
@@ -1,12 +1,21 @@
- {% extends 'base_app.html.twig' %}
+{% extends 'base_app.html.twig' %}
 
 {% block header %}
-   <nav>
+      <nav>
       <div class="nav-wrapper principal_bg">
         <a href="#!" class="brand-logo">Permergas</a>
         <ul class="right">
-          <li><a href="#"><i class="material-icons">more_vert</i></a></li>
+          <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
+        <!-- Menu 2 -->
+        <ul id='menu2' class='dropdown-content'>
+          <li><a href="#!">Ajustes de Seguridad</a></li>
+          <li><a href="#!">Solicitar Credito</a></li>
+          <li class="divider"></li>
+          <li><a href="#!">Información</a></li>
+          <li><a href="#">Cerrar Sesión</a></li>
+        </ul>
+
       </div>
     </nav>
 {% endblock%} 
@@ -14,12 +23,12 @@
   <section class="center">
     <div class="circle valign-wrapper">
       <div class="value_container">
-        <h2 class="value_grl">{{wallet.saldo}}</h2>
+        <h2 class="value_grl">{{wallet.saldo+wallet.saldoCredito}}</h2>
         <span>MXN</span>
       </div>
     </div>
     <p class="center">Saldo disponible para canje por Gasolina</p>
-    <a class="waves-effect waves-darken btn sec_btn">Agregar Saldo</a>
+    <a href="{{asset('app/qr')}}" class="waves-effect waves-darken btn sec_btn">Agregar Saldo</a>
 
   </section>
 
