--- a/templates/app/profile.html.twig
+++ b/templates/app/profile.html.twig
@@ -27,7 +27,7 @@
           <span  class="white-text"> jhondoe@example.com</span>
         </div>
         <div class="col s5">
-          <img src="img/avatar.jpg" class="circle" alt="">
+          <img src="{{asset('themeapp/img/avatar.jpg')}}" class="circle" alt="">
         </div>
       </div>
     </div>
