--- a/templates/app/login.html.twig
+++ b/templates/app/login.html.twig
@@ -1,4 +1,9 @@
  {% extends 'base_app.html.twig' %}
+{% block style %}
+  <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/inputs.css')}}" media="screen,projection" />  
+{% endblock %}
+
+
  {% block header %}
    
  {% endblock %}
