--- a/public/themeapp/css/main.css
+++ b/public/themeapp/css/main.css
@@ -1,3 +1,6 @@
+body{
+margin-bottom: 60px;
+}
 .body_splash {
   position: absolute;
   height: 100%;
@@ -215,12 +218,9 @@ font-weight: 300;
 .app-bar{
   width:100%;
   height:50px;
-  position:absolute;
+  position:fixed;
   bottom:0px;
   left:0;
-
-
-
 }
 
 .app-bar .bar{
@@ -307,4 +307,64 @@ font-weight: 300;
   width: auto !important;
   right: 0;
   left: auto !important;
+}
+
+  .success-transaccion::before{
+    content: '+'
+  }
+  .success-transaccion{
+    color: green;
+   }
+   .danger-transaccion{
+    color:red;
+   }
+
+@media only screen and (max-width: 800px) {
+    
+    /* Force table to not be like tables anymore */
+  #no-more-tables table, 
+  #no-more-tables thead, 
+  #no-more-tables tbody, 
+  #no-more-tables th, 
+  #no-more-tables td, 
+  #no-more-tables tr { 
+    display: block; 
+  }
+ 
+  /* Hide table headers (but not display: none;, for accessibility) */
+  #no-more-tables thead tr { 
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+ 
+  #no-more-tables tr { border: 1px solid #ccc; }
+ 
+  #no-more-tables td { 
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee; 
+    position: relative;
+    padding-left: 50%; 
+    white-space: normal;
+    text-align:left;
+  }
+ 
+  #no-more-tables td:before { 
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%; 
+    padding-right: 10px; 
+    white-space: nowrap;
+    text-align:left;
+    font-weight: bold;
+  }
+ 
+  /*
+  Label the data
+  */
+  #no-more-tables td:before { content: attr(data-title); }
 }
