--- a/templates/app/promociones.html.twig
+++ b/templates/app/promociones.html.twig
@@ -3,6 +3,9 @@
 {% block header %}
       <nav>
       <div class="nav-wrapper principal_bg">
+        <ul class="left">
+          <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
+        </ul>
         <a href="#!" class="brand-logo">Promociones</a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
