--- a/templates/app/profile.html.twig
+++ b/templates/app/profile.html.twig
@@ -11,52 +11,81 @@
         </ul>
         <a href="#!" class="brand-logo">Perfil</a>
         <ul class="right">
-          <li><a href="#"><i class="material-icons">edit</i></a></li>
+          <li id="edit" class="edit" ><a href="#"><i class="material-icons">edit</i></a></li>
         </ul>
       </div>
     </nav>
 {% endblock %}
 {% block body %}
 
-  <img class="bg_profile" src="{{asset('themeapp/img/bg_profile.svg')}}" alt="">
-  <section>
+<img class="bg_profile" src="{{asset('themeapp/img/bg_profile.svg')}}" alt="">
+
+	<section>
     <div class="container">
       <div class="row ">
         <div class="col s7 mt-4">
-          <h5 class="name-title white-text">Jhon Doe</h5>
-          <span  class="white-text"> jhondoe@example.com</span>
+          <h5 class="name-title white-text">{{cliente.nombres}} {{cliente.apellidos}}</h5>
+          <span  class="white-text"> {{cliente.email}}</span>
         </div>
         <div class="col s5">
+         {% if cliente.avatar %}
+			<img  class="circle" src="{{asset(cliente.avatar)}}" width="64" height="64"  alt="User">
+		{% else %}
           <img src="{{asset('themeapp/img/avatar.jpg')}}" class="circle" alt="">
+          {% endif %}
         </div>
       </div>
     </div>
   </section>
   <div class="container mt-10">
-    <form>
+    <form action="{{asset('app/update/profile')}}">
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">account_circle</i>
-          <input disabled id="icon_prefix" type="text" value="Jhon Doe" class="validate">
+          <input disabled id="nombres"  type="text" value="{{cliente.nombres}}" name="nombres" class="validate">
           <label class="active" for="icon_prefix">Nombre</label>
+        </div>
+         <div class="input-field col s12">
+          <i class="material-icons prefix">account_circle</i>
+          <input disabled id="apellidos" type="text" value="{{cliente.apellidos}}" name="apellidos" class="validate">
+          <label class="active" for="icon_prefix">Apellidos</label>
         </div>
         <div class="input-field col s12">
           <i class="material-icons prefix">phone</i>
-          <input disabled id="icon_telephone" type="tel" value="55 4344 43434" class="validate">
+          <input disabled id="telefono" type="tel" value="{{cliente.celular}}" name="celular" class="validate">
           <label class="active" for="icon_telephone">Teléfono</label>
         </div>
         <div class="input-field col s12">
           <i class="material-icons prefix">mail</i>
-          <input disabled id="icon_telephone" value="alguien@ejemplo.com" type="tel" class="validate">
+          <input disabled id="email" name="email" value="{{cliente.email}}" type="tel" class="validate">
           <label class="active" for="icon_telephone">Email</label>
         </div>
         <div class="input-field col s12">
           <i class="material-icons prefix">directions_car</i>
-          <input disabled id="icon_telephone" value="XHB-75S" type="tel" class="validate">
+          <input disabled id="placa" name="placa" value="{{cliente.placa}}" type="tel" class="validate">
           <label class="active" for="icon_telephone">PLaca</label>
         </div>
+
+         <button type="btn" id="btn-guardar" style="display: none" class="btn-app  bg_principal waves-effect waves-darken btn">Guardar</button>
+         <br/><br/><br/>
       </div>
     </form>
   </div>
 
+{% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript">
+  $(document).ready(function(){
+
+  	$("#edit").click(function(e){
+  		e.preventDefault();
+  		$("#btn-guardar").show();
+  		$(".validate").attr('disabled',false);
+  		$("#nombres").focus();
+  	}) 
+  });
+
+
+</script>
 {% endblock %}
