--- a/templates/base_app.html.twig
+++ b/templates/base_app.html.twig
@@ -62,7 +62,7 @@
        <a class="action_bottom"> </a>
        <a class="action_bottom" href="{{asset('app/dashboard')}}"> > </a>
        
-       <a href="{{asset('app/dashboard')}}" class="circle_btn button" >
+       <a href="{{asset('app/qr')}}" class="circle_btn button" >
         <i class="material-icons gas-img">local_gas_station </i>
        </a>
        <a class="action_bottom" href="{{asset('app/promociones')}}"> <i class="material-icons">card_giftcard</i </a>
