--- a/templates/gasolineras/_form.html.twig
+++ b/templates/gasolineras/_form.html.twig
@@ -25,4 +25,20 @@
 
 </div>
 </div>
+
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+    <div class="card">
+        <div class="header">
+            <h2>
+                <strong>Mapa Gasolinera</strong>
+            </h2>
+        </div>
+    <div class="card-body table-responsive">
+        <div id="map" style="width:100;height:510px">
+            Cargando mapa...
+        </div>
+    </div>
+</div>
+</div>
+
 </div>
