--- a/templates/app/qr.html.twig
+++ b/templates/app/qr.html.twig
@@ -14,15 +14,17 @@
         <ul class="left">
           <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
-                <a href="#!" class="brand-logo">Agregar Saldo</a>
-
+        <a href="#!" class="brand-logo">Promociones</a>
+        <ul class="right">
+          <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
+        </ul>
         <!-- Menu 2 -->
         <ul id='menu2' class='dropdown-content'>
           <li><a href="#!">Ajustes de Seguridad</a></li>
           <li><a href="#!">Solicitar Credito</a></li>
           <li class="divider"></li>
           <li><a href="#!">Información</a></li>
-          <li><a href="#">Cerrar Sesión</a></li>
+          <li><a href="{{asset('logout')}}">Cerrar Sesión</a></li>
         </ul>
 
       </div>
@@ -30,7 +32,7 @@
 {% endblock%} 
 {% block body %}
   
-    <div id="pincode">
+    <div id="s">
     <div class="table">
       <div class="cell">
 
