--- a/templates/app/transacciones.html.twig
+++ b/templates/app/transacciones.html.twig
@@ -6,7 +6,7 @@
         <ul class="left">
           <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
-        <a href="#!" class="brand-logo">Transacciones</a>
+        <a href="#!" class="brand-logo">Promociones</a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
@@ -16,7 +16,7 @@
           <li><a href="#!">Solicitar Credito</a></li>
           <li class="divider"></li>
           <li><a href="#!">Información</a></li>
-          <li><a href="#">Cerrar Sesión</a></li>
+          <li><a href="{{asset('logout')}}">Cerrar Sesión</a></li>
         </ul>
 
       </div>
