--- a/templates/app/qr.html.twig
+++ b/templates/app/qr.html.twig
@@ -32,7 +32,7 @@
 {% endblock%} 
 {% block body %}
   
-    <div id="s">
+    <div id="pincode">
     <div class="table">
       <div class="cell">
 
