--- a/templates/app/slider.html.twig
+++ b/templates/app/slider.html.twig
@@ -55,7 +55,7 @@
    <script type="text/javascript">
     $(document).ready(function(){
       setTimeout(function(){
-      location.href='slider';
+      location.href='login';
       },5000)
     });
   </script>
