--- a/templates/app/qr.html.twig
+++ b/templates/app/qr.html.twig
@@ -95,5 +95,5 @@
   </section>
 {% endblock %} 
 {% block javascripts %}
-  <script src="{{asset('themeapp/js/codepin.js')}}"></script>
+  <script src="{{asset('themeapp/js/codepin_redirect.js')}}"></script>
 {% endblock %} 
